--- a/.gherkin-lintrc
+++ b/.gherkin-lintrc
@@ -20,6 +20,6 @@
   "one-space-between-tags": "on",
   "no-unused-variables": "on",
   "no-background-only-scenario": "on",
-  "no-empty-background": "on",
+  "no-empty-background": "off",
   "scenario-size": ["on", { "steps-length": {"Background": 15, "Scenario": 15}}]
 }
