--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "multiple-cucumber-html-reporter": "^1.18.0",
-    "cucumber-html-reporter": "^5.4.0"
+    "cucumber-html-reporter": "^5.4.0",
+    "multiple-cucumber-html-reporter": "^1.19.0"
   }
 }
