--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,18 +1,8 @@
 # main links
 main:
-  - title: "Theme Documentation"
-    url: https://perstarke-webdev.de/oneflow-jekyll-theme
-    blank: true
-    description: "The documentation for this theme, on https://perstarke-webdev.de"
-  - title: "Section 1"
-    url: /#section-1
+  - title: "Features"
+    url: /#features
     blank: false
-  - title: "Section 2"
-    url: /#section-2
-    blank: false
-  - title: "Section 3"
-    url: /#section-3
-    blank: false
-  - title: "Section 4"
-    url: /#section-4
+  - title: "Installation"
+    url: /#installation
     blank: false
